--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>CSS Layout with Vite</title>
   </head>
   <body>
-    <h1>Hello Vite!!</h1>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
   </body>
 </html>
