--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>CSS Layout with Vite</title>
   </head>
   <body>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div class="father">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
   </body>
 </html>
